comit Practice-CSS

--- a/Practice-CSS/1 Part_Styles creation/Style.css
+++ b/Practice-CSS/1 Part_Styles creation/Style.css
@@ -46,3 +46,9 @@ blockquote{
 .interesting{
 	font-style:italic;
 }
+#info{
+	background-color: #FAF0E6;
+	padding: 0;
+	margin: 0 auto;
+	width: 800px;	
+}
